# stock-ai-platform

./: README.md  alerts.py  app.py  backtest.py  broker_integration.py  config.yaml  daily_report.py  datafeed.py  features.py  journal.py  ml_ranker.py  options.py  pyproject.toml  requirements.txt  risk.py  strategy.py
backend/: main.py
frontend/: package.json
frontend/src/: App.jsx
