package-mode = false
[tool.poetry]
name = "ai-stocks"
version = "0.1.0"
description = "Trading Assistant"
authors = ["Your Name <your.email@example.com>"]
package-mode = false  # ← THIS LINE IS CRITICAL

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.31.0"
yfinance = "^0.2.36"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
plotly = "^5.18.0"
pyyaml = "^6.0.1"
ta = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
